Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/SMAX_PS_Experience_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings used to calculate the Work, Field, Training, and Final scores for Experience records</description>
    <label>Experience Setting</label>
    <pluralLabel>Experience Settings</pluralLabel>
</CustomObject>