Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Maximum_Months__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Maximum_Months__c</fullName>
    <label>Maximum Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>