Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Order_Types__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Order_Types__c</fullName>
    <description>Order Types separated by commas</description>
    <inlineHelpText>Order Types separated by commas</inlineHelpText>
    <label>Order Types</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>