Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Score__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Score__c</fullName>
    <label>Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>