Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Training_Score__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Training_Score__c</fullName>
    <label>Training Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>