Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
                <default>true</default>
                <label>Work</label>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>ActivityType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>