Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Work_Maximum__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Maximum__c</fullName>
    <label>Work Maximum</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>