Perkin-UAT/force-app/main/default/objects/SMAX_PS_Experience_Setting__mdt/fields/SMAX_PS_Work_Minimum__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Minimum__c</fullName>
    <label>Work Minimum</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>